<?xml version="1.0" encoding="utf-8"?>
<!--
  Copyright 2012 Google Inc. All Rights Reserved.

  Licensed under the Apache License, Version 2.0 (the "License");
  you may not use this file except in compliance with the License.
  You may obtain a copy of the License at

       http://www.apache.org/licenses/LICENSE-2.0

  Unless required by applicable law or agreed to in writing, software
  distributed under the License is distributed on an "AS IS" BASIS,
  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  See the License for the specific language governing permissions and
  limitations under the License.
-->
<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">

    <string name="app_name">Video Wall</string>

    <string name="error_thumbnail_view">There was an error initializing the YouTubeThumbnailView (%1$s)</string>
    <string name="error_player">There was an error initializing the YouTubePlayer (%1$s)</string>
    
    <!-- Home Menus -->
    <string name="menu_about">About</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_select_playlist">Select Playlist</string>
    
    <!-- About -->
    <string name="about_title">Video Wall</string>
    <string name="about_button_privacy_policy">Privacy Policy</string>
    <string name="about_button_privacy_policy_url">http://blog.entertailion.com/privacy-policy</string>
    <string name="about_button_web">Web Site</string>
    <string name="about_button_web_url">https://github.com/entertailion/Video-Wall</string>
    <string name="about_button_more_apps">More Apps</string>
    <string name="about_button_more_apps_url">https://play.google.com/store/apps/developer?id=ENTERTAILION+LLC</string>
    <string name="about_version_title">Video Wall %s</string>
    <string name="about_button_feedback">Feedback</string>
    <string name="about_button_feedback_email">videowall@entertailion.com</string>
    <string name="about_copyright">\u00A9 2013 ENTERTAILION LLC. All other trademarks and copyrights are property of their respective owners. All rights reserved.</string>
    <string name="unknown_build">Unknown</string>
    <string name="about_acknowledge">Based on the YouTube API Video Wall demo code by Google.</string>
    
    <!-- Introduction -->
    <string name="introduction_instruction1">Use the Menu button to select a playlist.</string>
    <string name="introduction_instruction2">Use the OK button to launch the current video in the YouTube app.</string>
    <string name="introduction_button">OK</string>
    
    <!-- Rating -->
    <string name="rating_title">Rate Video Wall</string>
    <string name="rating_message">If you enjoy using Video Wall, please take a moment to rate it. Thanks for your support!</string>
    <string name="rating_ok">Rate App</string>
    <string name="rating_remind">Remind me later</string>
    <string name="rating_no">No, thanks</string>
    
    <!-- Dialogs -->
    <string name="dialog_yes">Yes</string>
    <string name="dialog_no">No</string>
    <string name="dialog_ok">OK</string>
    
    <!-- Preferences -->
    <string name="preferences_category_general">General Settings</string>
    <string name="preferences_general_effect_title">Effect</string>
    <string name="preferences_general_effect_summary">Flip</string>
    <string name="preferences_general_effect_flip">Flip</string>
    <string name="preferences_general_effect_fade">Fade</string>
    <string name="preferences_general_effect_right_left">Right/Left</string>
    <string name="preferences_general_effect_top_down">Top/Down</string>
    <string name="preferences_general_border_title">Border</string>
    <string name="preferences_general_border_summary">Thin</string>
    <string name="preferences_general_border_none">None</string>
    <string name="preferences_general_border_thin">Thin</string>
    <string name="preferences_general_border_thick">Thick</string>
    <string name="preferences_general_rows_title">Rows</string>
    <string name="preferences_general_rows_summary">4</string>
    <string name="preferences_general_rows_two">2</string>
    <string name="preferences_general_rows_three">3</string>
    <string name="preferences_general_rows_four">4</string>
    <string name="preferences_general_highlight_title">Video Highlight</string>
    <string name="preferences_general_highlight_summary_checked">Display video highlight</string>
    <string name="preferences_general_highlight_summary_unchecked">Don\&apos;t display video highlight</string>
    
    <!-- YouTube -->
    <string name="terms_html">&lt;p>This application plays YouTube videos.&lt;/p> &lt;p>By using this application, you have agreed to the following Terms of Use and Copyright Notes:&lt;br/>&lt;a href=http://www.youtube.com/t/terms>YouTube Terms of Service&lt;/a>&lt;br/>&lt;a href=http://www.youtube.com/t/privacy>YouTube Privacy Policy&lt;/a>&lt;br/>&lt;a href=http://www.youtube.com/t/copyright_center>YouTube Copyright&lt;/a></string>

</resources>
